maze.lessons.maze.pledge.PledgeMaze.scala.error
Escaper:8: error: type mismatch;
 found   : Int(1)
 required: String
		if (!estFaceMur()) {avance();sommeAngle=sommeAngle+1}
                                                                   ^Escaper:12: error: value - is not a member of Any
			else {droite();sommeAngle=sommeAngle-1}
                                                            ^Escaper:19: error: value =- is not a member of Any
			sommeAngle=-1
                                  ^